<resources>
    <string name="app_name">WhatsforDinner</string>
    <string name="buttonMealsText">Meals</string>
    <string name="buttonRecipesText">Recipes</string>
    <string name="buttonGroceriesText">Groceries</string>
    <string name="buttonNewDishText">New Dish</string>
    <string name="dishRecipeName">Recipe Name</string>
    <string name="dishRecipeNameHint">Enter Recipe Name</string>
    <string name="dishRecipeDirections">Directions</string>
    <string name="dishRecipeDirectionsHint">Enter Recipe Directions</string>
    <string name="dishIngredients">Ingredients:</string>
    <string name="author">Author: Alexander Kamensky</string>
    <string name="version">Version: 0.1</string>
    <string name="link">https://github.com/SJSU-Fall2018-CS175/assignment-1-what-s-for-dinner-team-k</string>
    <string name="copyright">All images property of their respective owners.</string>


    <string name="mealsDay">Day</string>
    <string name="mealsBreakfast">Breakfast</string>
    <string name="mealsLunch">Lunch</string>
    <string name="mealsDinner">Dinner</string>
    <string name="mealsPrevious">Previous</string>
    <string name="mealsNext">Next</string>
    <string name="ingredient1Hint">Ingredient1</string>
    <string name="ingredient2Hint">Ingredient2</string>
    <string name="ingredient3Hint">Ingredient3</string>
    <string name="ingredient4Hint">Ingredient4</string>
    <string name="ingredient5Hint">Ingredient5</string>
    <string name="ingredient6Hint">Ingredient6</string>
    <string name="ingredient7Hint">Ingredient7</string>
    <string name="ingredient8Hint">Ingredient8</string>
    <string name="ingredient9Hint">Ingredient9</string>
    <string name="ingredient10Hint">Ingredient10</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
