<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_custom_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:padding="2dp"
    >
    <ImageButton
        android:id="@+id/mainPopupClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/close"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        />
    <TextView
        android:id="@+id/mainPopupAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_below="@id/mainPopupClose"
        android:padding="25sp"
        />

    <TextView
        android:id="@+id/mainPopupVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_below="@id/mainPopupAuthor"
        android:padding="25sp"
        />

    <TextView
        android:id="@+id/mainPopupLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link"
        android:textColor="#000000"
        android:layout_below="@id/mainPopupVersion"
        android:padding="25sp"
        />

    <TextView
        android:id="@+id/mainPopupCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textColor="#000000"
        android:layout_below="@id/mainPopupLink"
        android:padding="25sp"
        />

</RelativeLayout>