<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"

    tools:context=".MealsActivity">

    <TextView
        android:id="@+id/mealsDayText"
        android:layout_width="168dp"
        android:layout_height="84dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:text="@string/mealsDay"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="20dp"
        android:textColor="#000000"/>


    <TextView
        android:id="@+id/mealsBreakfastText"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="192dp"
        android:text="@string/mealsBreakfast"
        android:textSize="20dp"
        android:textColor="#000000"/>

    <Spinner
        android:id="@+id/mealsBreakfastSpinner"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/mealsBreakfastText"
        android:layout_alignBottom="@+id/mealsBreakfastText"
        android:textSize="20dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/mealsLunchText"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/mealsLunch"
        android:textSize="20dp"
        android:textColor="#000000"/>

    <Spinner
        android:id="@+id/mealsLunchSpinner"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/mealsLunchText"
        android:layout_alignBottom="@+id/mealsLunchText"
        android:textSize="20dp"
        android:textColor="#000000"/>

    <TextView
        android:id="@+id/mealsDinnerText"
        android:layout_width="172dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="196dp"
        android:text="@string/mealsDinner"
        android:textSize="20dp"
        android:textColor="#000000"/>

    <Spinner
        android:id="@+id/mealsDinnerSpinner"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/mealsDinnerText"
        android:layout_alignBottom="@+id/mealsDinnerText"
        android:textSize="20dp"
        android:textColor="#000000"/>


    <Button
        android:id="@+id/mealsPrevButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:onClick="prevDay"
        android:text="@string/mealsPrevious"
        android:textSize="20dp" />



    <Button
        android:id="@+id/mealsNextButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@id/mealsPrevButton"
        android:layout_alignTop="@id/mealsPrevButton"
        android:text="@string/mealsNext"
        android:textSize="20dp"
        android:onClick="nextDay"/>



</RelativeLayout>